Updating a deprecated meta name

--- a/example.config.yaml
+++ b/example.config.yaml
@@ -29,7 +29,7 @@ site:
   # Optional proxy server to be used for the scraper
   # proxy:
   #   http: 'http://proxyserver.com:8080'
-  #   https: 'https://proxyserver.com:8080'
+  #   https: 'http://proxyserver.com:8080'
 
   # List of domains to be handled by the scraper proxy
   proxydomains:
