--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "time-elements": "^3.0.0",
     "tingle.js": "^0.14.0",
     "tinycon": "^0.6.8",
-    "url-loader": "^1.1.2"
+    "url-loader": "^1.1.2",
+    "lodash": "^4.17.21"
   }
 }
